# datapath

./: Cargo.toml  README.md  lychee.toml  typos.toml
.github/workflows/: ci.yml
crates/datapath/: Cargo.toml  README.md
crates/datapath-macro/: Cargo.toml
crates/datapath-macro/src/: lib.rs
crates/datapath/src/: datapath.rs  datapathfile.rs  lib.rs  schema.rs  wildcardable.rs
crates/datapath/src/index/: mod.rs  rule.rs
