[package]
name = "datapath"
description = "Type-safe structured paths with partitions, parsing, and schema associations"
keywords = ["path", "filesystem", "parsing", "typed", "schema"]
categories = ["filesystem", "data-structures", "parsing"]
rust-version = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
authors = { workspace = true }

[lints]
workspace = true

[dependencies]
datapath-macro = { workspace = true }

regex = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
trie-rs = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

[features]
default = []
index = ["dep:regex", "dep:trie-rs", "dep:tracing", "dep:itertools"]
tokio = ["dep:tokio"]
